--- a/app/Resources/views/admin/show.html.twig
+++ b/app/Resources/views/admin/show.html.twig
@@ -1,23 +1,24 @@
 {% extends "base.html.twig" %}
-{% block title %}Admin{% endblock %}
+{% block title %}User{% endblock %}
 {% block body %}
-    <h1>Admin page</h1>
-    <a href="{{ absolute_url(path("user_create")) }}">create a new one</a>
-    <h2>Users</h2>
-    {% for person in persons %}
-        <div class="row">
-            <div class="col-xs-12 col-sm-3">
-                {{ person.fname }}
-            </div>
-            <div class="col-xs-12 col-sm-3">
-                {{ person.lname }}
-            </div>
-            <div class="col-xs-12 col-sm-3">
-                <a href="{{ absolute_url(path("user_show", {'userId': person.id})) }}">detail</a>
-            </div>
-            <div class="col-xs-12 col-sm-3">
-                <a href="{{ absolute_url(path("user_delete", {'userId': person.id})) }}">delete</a>
-            </div>
+    <h1>User page</h1>
+    <a href="{{ absolute_url(path('admin')) }}">back</a>
+    <h2>{{ person.fname }} {{ person.lname }}</h2>
+    <div class="row">
+        <div class="col-xs-12 col-sm-6">
+            {{ form_start(form) }}
+            {{ form_widget(form) }}
+            {{ form_end(form) }}
         </div>
-    {% endfor %}
+        <div class="col-xs-12 col-sm-6">
+            {% set messages = person.messages.getValues %}
+            {% for message in messages %}
+                <div>
+                    <h4>{{ message.topic }}</h4>
+                    <p>{{ message.body }}</p>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+    {#{{ dump(person.messages.getValues) }}#}
 {% endblock %}
