--- a/app/Resources/views/admin/show.html.twig
+++ b/app/Resources/views/admin/show.html.twig
@@ -5,12 +5,12 @@
     <a href="{{ absolute_url(path('admin')) }}">back</a>
     <h2>{{ person.fname }} {{ person.lname }}</h2>
     <div class="row">
-        <div class="col-xs-12 col-sm-6">
-            {{ form_start(form) }}
+        <div class="col-xs-12 col-sm-4">
+            {{ form_start(form, {'attr': {'class': 'mailform'}}) }}
             {{ form_widget(form) }}
             {{ form_end(form) }}
         </div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-sm-7 col-sm-offset-1">
             {% set messages = person.messages.getValues %}
             {% for message in messages %}
                 <div class="msg">
