--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,4 +1,37 @@
-div {
-  width: 80%; }
+.msg {
+  width: 80%;
+  margin-bottom: 15px;
+  border-radius: 10px;
+  padding: 10px;
+  word-wrap: break-word; }
+  .msg:nth-child(odd) {
+    float: left;
+    background: #90C3D4; }
+  .msg:nth-child(even) {
+    float: right;
+    background: #90A6AD; }
+
+label {
+  display: block;
+  margin: 20px 0 15px; }
+
+label,
+input {
+  width: 100%; }
+
+.mailform textarea {
+  width: 100%;
+  min-height: 200px; }
+
+button {
+  margin: 20px 0 0;
+  padding: 5px 25px;
+  cursor: pointer;
+  border-radius: 10px;
+  border: 0;
+  outline: none;
+  float: right; }
+  button:active {
+    background: #90C3D4; }
 
 /*# sourceMappingURL=main.css.map */
