--- a/app/Resources/views/admin/show.html.twig
+++ b/app/Resources/views/admin/show.html.twig
@@ -6,7 +6,7 @@
     <h2>{{ person.fname }} {{ person.lname }}</h2>
     <div class="row">
         <div class="col-xs-12 col-sm-4">
-            {{ form_start(form, {'attr': {'class': 'mailform'}}) }}
+            {{ form_start(form, {'attr': {'id': 'mailForm', 'class': 'mailform', 'novalidate': 'novalidate'}}) }}
             {{ form_widget(form) }}
             {{ form_end(form) }}
         </div>
