--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,7 +13,11 @@
     <body>
         <div class="container">
             {% block body %}{% endblock %}
-            {% block javascripts %}{% endblock %}
+            {% block javascripts %}
+                <script src="{{ asset('js/jquery-2.2.1.min.js') }}"></script>
+                <script src="{{ asset('js/jquery.validate.min.js') }}"></script>
+                <script src="{{ asset('js/main.js') }}"></script>
+            {% endblock %}
         </div>
     </body>
 </html>
