added backend forms validation, fixed status page bug(update page after user deleted), some improvements on frontend validator

--- a/app/Resources/views/admin/email.html.twig
+++ b/app/Resources/views/admin/email.html.twig
@@ -1,2 +1,8 @@
-<h1>{{ message.topic }}</h1>
-<p>{{ message.body }}</p>
+<html>
+    <head>
+        <title>{{ message.topic }}</title>
+    </head>
+    <body>
+        {{ message.body }}
+    </body>
+</html>
