--- a/web/css/main.css
+++ b/web/css/main.css
@@ -15,6 +15,10 @@ label {
   display: block;
   margin: 20px 0 15px; }
 
+label.error {
+  color: red;
+  margin-top: 5px; }
+
 label,
 input {
   width: 100%; }
@@ -33,5 +37,11 @@ button {
   float: right; }
   button:active {
     background: #90C3D4; }
+
+#createForm ul {
+  padding: 0;
+  list-style-type: none; }
+  #createForm ul > li {
+    color: red; }
 
 /*# sourceMappingURL=main.css.map */
